# hfq_rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  design_memo.md  part2.jsm  quicktest.jsm  testdata.jsm
src/: get_margines.rs  get_margines_util.rs  lib.rs  main.rs  prelude.rs  simulation.rs
src/modules/: configures.rs  get_margines.rs  get_margines_util.rs  mod.rs  plotly_example.js  simulation.rs
tests/: jtl.jsm  parameter.toml  test.ipynb  xor.jsm
tests/tane/and/: andbkp.ipynb
tests/tane/cb/: cb.ipynb  cd21
tests/tane/dc-hfq/: dchfq.ipynb
tests/tane/dff/: dff.ipynb
tests/tane/edff/: dffe.ipynb
tests/tane/htos/: ijtlSH_JTL_HtoS.ipynb  jtl.ipynb
tests/tane/or/: or.ipynb
tests/tane/or/jtl/: jtl_fabricated.ipynb
tests/tane/spl/: cb.ipynb
tests/tane/xor/: XOR_checked_prot.ipynb  plot.ipynb  xor.ipynb
