[package]
name = "hfq_rs"
version = "0.0.3"
authors = ["Nishizacky"]
edition = "2021"
license = "MIT"
description = "optimized for multithreading and enhanced performance using Polars for dataframe operations, designed to analyze circuit files for josim and determine the operating margins of specified circuit elements."
readme = "README.md"

[dependencies]
regex = "1.10.0"
indicatif = "0.17.8"
polars = "0.41.3"
chrono = "0.4.38"
